--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/lovable-uploads/7531169a-4b59-4379-bcab-b5da36b7872f.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="GRIDVERSE offers AI-powered business solutions to help you automate tasks, generate optimized content, and scale your business faster with cutting-edge AI technology." />
+    <meta name="description" content="Discover risks across Google/Microsoft, GitHub, and AWS — then autofix them and export audit-ready evidence. Outcomes, not alerts.">
     <meta name="keywords" content="AI business solutions, AI automation, AI content generation, AI web development, small business AI, AI workflows, business scaling, AI-powered growth, business efficiency, AI tools, digital transformation, artificial intelligence for business, AI agency, AI consulting, automated marketing, AI content creation, AI strategy, business process automation, AI chatbots, AI analytics" />
     <meta name="author" content="GRIDVERSE" />
     <meta name="robots" content="index, follow" />
@@ -69,7 +69,7 @@
     }
     </script>
     
-    <title>GRIDVERSE - AI-Powered Business Solutions for Automation & Growth</title>
+    <title>GridVerse Security — Autonomous security control plane (Health Check + Autofix)</title>
     
     <!-- GPT Engineer script for Select feature -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
